RESOLVED FIXED57982
AVF: MediaPlayerPrivateAVFoundationObjC should not use -[AVPlayerItem isPlaybackBufferEmpty]
https://bugs.webkit.org/show_bug.cgi?id=57982
Summary AVF: MediaPlayerPrivateAVFoundationObjC should not use -[AVPlayerItem isPlayb...
Jer Noble
Reported 2011-04-06 14:11:38 PDT
-[AVPlayerItem isPlaybackBufferEmpty] often returns incorrect results. Instead, call -[AVPlayerItem loadedTimeRanges] and determine if the current time resides within those ranges.
Attachments
Patch (2.09 KB, patch)
2011-04-06 14:24 PDT, Jer Noble
no flags
Patch (2.09 KB, patch)
2011-04-06 14:53 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2011-04-06 14:12:07 PDT
Jer Noble
Comment 2 2011-04-06 14:22:57 PDT
This might result in the platformBufferedTimeRanges() being called more often. The tradeoff here is performance vs. correctness. As it stands, the current implementation, due to bugs in AVFoundation, is incorrect.
Jer Noble
Comment 3 2011-04-06 14:24:39 PDT
mitz
Comment 4 2011-04-06 14:43:10 PDT
Comment on attachment 88512 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=88512&action=review r!=me > Source/WebCore/ChangeLog:8 > + Query our cached loaded time array instead of asking AVPlayerItem if it's buffer is empty. it's -> its
Jer Noble
Comment 5 2011-04-06 14:53:28 PDT
Created attachment 88519 [details] Patch Fixed some inverted conditionals and extraneous apostrophes.
Darin Adler
Comment 6 2011-04-06 16:49:22 PDT
Comment on attachment 88519 [details] Patch That function name, contain, is really strange. It’s a verb.
Jer Noble
Comment 7 2011-04-06 16:58:38 PDT
(In reply to comment #6) > (From update of attachment 88519 [details]) > That function name, contain, is really strange. It’s a verb. I know, I intensely dislike it. Thanks for the review!
WebKit Commit Bot
Comment 8 2011-04-06 20:34:24 PDT
Comment on attachment 88519 [details] Patch Clearing flags on attachment: 88519 Committed r83135: <http://trac.webkit.org/changeset/83135>
WebKit Commit Bot
Comment 9 2011-04-06 20:34:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.