2011-04-06  Jer Noble  <jer.noble@apple.com>

Reviewed by Darin Adler.

        AVF: MediaPlayerPrivateAVFoundationObjC should not use -[AVPlayerItem isPlaybackBufferEmpty]
        https://bugs.webkit.org/show_bug.cgi?id=57982

        Query our cached loaded time array instead of asking AVPlayerItem if its buffer is empty.

        * platform/graphics/avfoundation/MediaPlayerPrivateAVFoundationObjC.mm:
        (WebCore::MediaPlayerPrivateAVFoundationObjC::playerItemStatus):

Canonical link: https://commits.webkit.org/72915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83135 268f45cc-cd09-0410-ab3c-d52691b4dbfc